[package]
name = "cursed-maze"
version = "0.1.0"
authors = ["Evan Rittenhouse <emanguy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.99.0"
device_query = "0.2.7"
rand = "0.8.4"
thiserror = "1.0.30"
ordered-float = "2.10.0"
derive_more = "0.99.17"
